--- a/src/main/webapp/styles.css
+++ b/src/main/webapp/styles.css
@@ -211,7 +211,7 @@ footer {
     color: #fff;
     text-align: center;
     padding: 1rem 0;
-    position: absolute;
+    position: relative;
     width: 100%;
     bottom: 0;
 }
