--- a/src/main/webapp/jsp/styles.css
+++ b/src/main/webapp/jsp/styles.css
@@ -1,13 +1,20 @@
-body {
+html,body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     background-color: #a6e4f5;
+    height:100%;
+    display:flex;
+    flex-direction:column;
 }
-.main{
-    display: flex;
-    padding: 30px;
+.wrapper{
+	display:flex;
+	flex-direction:column;
+	min-height:100vh;
+}
+main{
+    flex:1;
 }
 .registration {
     
@@ -18,7 +25,7 @@ body {
     /*background-color: rgba(237, 104, 15, 0.5); /* Colore di sfondo con trasparenza */
     padding:  20 px;
     border-radius: 5px;
-    text-align: center-right;
+    text-align: right;
     transform: translateY(3%);
     
 }
@@ -106,10 +113,10 @@ header {
 }
 
 .logo img {
-   position: top;
+   position: absolute;
    left: 2%;
    transform: translateY(-60%);
-   margin: 0 px;
+   margin: 0 ;
 
 }
 
@@ -212,9 +219,9 @@ footer {
     color: #fff;
     text-align: center;
     padding: 1rem 0;
-    
+    /*position: absolute;*/
     width: 100%;
-    bottom: 0;
+    /*bottom: 0;*/
 }
 footer .social-icons a {
     color: #fff;
@@ -226,7 +233,10 @@ footer .social-icons a {
 footer .social-icons a:hover {
     color: #007bff;
 }
-
+.main{
+	display:flex;
+	padding:30px;
+}
 .news-container {
     max-width: 1000px;
     margin: 60px auto;
